--- a/76. Minimum Window Substring.ipynb
+++ b/76. Minimum Window Substring.ipynb
@@ -8,52 +8,83 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**時間複雜度: O( $n+m$ )**  \n",
+    "**空間複雜度: O( $k$ )**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Solution:\n",
-    "    def minWindow(self, s, t):\n",
-    "        print(f\"s = {s}\\nt = {t}\")\n",
-    "        need = {}  # 用一個字典來儲存目標字串 t 中各個字符出現的次數\n",
-    "        for i in t:\n",
-    "            need[i] = need.get(i, 0) + 1  # 初始化 need 字典中各個字符的出現次數\n",
+    "    def minWindow(self, s: str, t: str) -> str: # time: O(n+m), space: O(k)\n",
+    "        print(f\"{s=}, {t=}\")\n",
+    "        # 如果 s 的長度小於 t，則無法形成子串，直接返回空字串\n",
+    "        if len(s) < len(t):\n",
+    "            return \"\"\n",
     "\n",
-    "        missing = len(t)  # missing 表示需要匹配的字符數量\n",
-    "        start, end = 0, 0  # start 和 end 分別表示匹配到的子字串的起始位置和結束位置\n",
-    "        print(f\"init: start, = {start}, end = {end}, missing = {missing}, need = {need}\")\n",
-    "        i = 0  # i 是匹配到的子字串的起始位置\n",
+    "        # 初始化目標字母頻率的字典 # time: O(m), space: O(k) (m 為 t 的長度，k 為不同字母的數量)\n",
+    "        target_count = {}\n",
+    "        for char in t:\n",
+    "            target_count[char] = target_count.get(char, 0) + 1\n",
+    "        \n",
+    "        windows_count = {} # 初始化窗口內字母頻率的字典 # space: O(k)\n",
+    "        \n",
+    "        required = len(target_count) # 需要匹配的不同字母數量 \n",
+    "        formed = 0 # 當前匹配成功的不同字母數量\n",
+    "        \n",
+    "        min_length = float('inf') # 初始化最短窗口的長度為無窮大\n",
+    "        \n",
+    "        left, right = 0, 0 # 左右指針初始化，分別用於控制窗口的邊界\n",
+    "        min_left, min_right = 0, 0 # 記錄最短窗口的邊界\n",
     "\n",
-    "        for j, char in enumerate(s, 1):\n",
-    "            print(f\"\\nj = {j}, char = {char}\")\n",
-    "            if (char in need) and (need[char] > 0):\n",
-    "                print(f\"(need[char] = need[{char}] = {need[char]}) > 0\")\n",
-    "                missing -= 1  # 如果 s[j] 是目標字符，並且需要匹配的字符數量減 1\n",
+    "        print(f\"{target_count=}, {required=}\")\n",
     "\n",
-    "            need[char] = need.get(char, 0) - 1  # 將目標字符對應的 need 字典中的值減 1，表示已經匹配到了一個字符\n",
-    "            print(f\"substring: missing = {missing}, need = {need}\")\n",
+    "        # 開始右指針的滑動 # time: O(2n) -> O(n) (因為 left 和 right 最多各移動 n 次)\n",
+    "        while right < len(s): # 移動右指針\n",
+    "            # 將右指針指向的字母加入窗口\n",
+    "            char = s[right]\n",
+    "            windows_count[char] = windows_count.get(char, 0) + 1\n",
+    "            print(f\"\\nchar_right={char}, {windows_count[char]=}\")\n",
+    "\n",
+    "            # 如果該字母的窗口內數量與目標數量相等，增加匹配計數\n",
+    "            if (char in target_count) and (windows_count[char] == target_count[char]):\n",
+    "                formed += 1\n",
+    "                print(f\"- update_right: {formed=}  ({windows_count[char]=}, {target_count[char]=})\")\n",
+    "\n",
+    "            # 當窗口內的匹配成功字母數量與目標一致時，開始縮小左窗口\n",
+    "            while (left <= right) and (formed == required): # 移動左指針\n",
+    "                char = s[left]\n",
+    "                print(f\"-- char_left={char}  ({formed=}, {required=})\")\n",
+    "                print(f\"-- {left=}, {right=}\")\n",
+    "\n",
+    "                # 如果當前窗口長度比已記錄的最短長度更短，更新最短長度及邊界\n",
+    "                if (right - left + 1) < min_length:\n",
+    "                    min_length = right - left + 1\n",
+    "                    min_left, min_right = left, right\n",
+    "                    print(f\"-- update: {min_length=}, {min_left=}, {min_right=}\")\n",
+    "                \n",
+    "                windows_count[char] -= 1 # 移除左邊界的字母並更新頻率\n",
+    "                print(f\"-- update_left: {windows_count[char]=}\")\n",
+    "\n",
+    "                # 如果移除的字母導致匹配失效，減少匹配計數\n",
+    "                if (char in target_count) and (windows_count[char] < target_count[char]):\n",
+    "                    formed -= 1\n",
+    "                    print(f\"-- update_left: {formed=}  ({windows_count[char]=}, {target_count[char]=})\")\n",
+    "                \n",
+    "                left += 1 # 移動左指針\n",
+    "                print(f\"-- {left=}\")\n",
     "            \n",
-    "            if missing == 0:  # 如果需要匹配的字符數量已經為 0\n",
-    "                print(f\"(missing = {missing}) == 0\")\n",
-    "                while (i < j) and (need[s[i]] < 0):  # 移動 i 的位置，直到 need[s[i]] >= 0，以最小化該子字串\n",
-    "                    print(f\"((i = {i}) < (j = {j})) and ((need[s[i]] = need[{s[i]}] = {need[s[i]]}) < 0)\")\n",
-    "                    need[s[i]] += 1\n",
-    "                    i += 1\n",
+    "            right += 1 # 移動右指針\n",
+    "            print(f\"{right=}\")\n",
     "\n",
-    "                missing += 1  # 增加需要匹配的字符數量\n",
-    "                need[s[i]] += 1\n",
-    "                print(f\"new substring: missing = {missing}, need = {need}\")\n",
-    "\n",
-    "                if (end == 0) or ((j - i) < (end - start)):  # 如果找到了一個更小的子字串\n",
-    "                    print(f\"((end = {end}) == 0) or (((j - i) = ({j} - {i}) = {j - i}) < ((end - start) = ({end} - {start}) = {end - start}))\")\n",
-    "                    start, end = i, j\n",
-    "                    \n",
-    "                i += 1  # 移動 i 的位置\n",
-    "                print(f\"new: start = {start}, end = {end}, i = {i}\")\n",
-    "                print(f\"result: {s[i-1:j]}, best_result = {s[start:end]}\")\n",
-    "\n",
-    "        return s[start:end]  # 返回找到的最小子字串\n"
+    "        # 如果找到的最短窗口長度不是初始值，返回該子串；否則返回空字串\n",
+    "        return s[min_left:min_right+1] if min_length != float('inf') else \"\""
    ]
   },
   {
@@ -65,74 +96,98 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "s = ADOBECODEBANC\n",
-      "t = ABC\n",
-      "init: start, = 0, end = 0, missing = 3, need = {'A': 1, 'B': 1, 'C': 1}\n",
+      "s='ADOBECODEBANC', t='ABC'\n",
+      "target_count={'A': 1, 'B': 1, 'C': 1}, required=3\n",
       "\n",
-      "j = 1, char = A\n",
-      "(need[char] = need[A] = 1) > 0\n",
-      "substring: missing = 2, need = {'A': 0, 'B': 1, 'C': 1}\n",
+      "char_right=A, windows_count[char]=1\n",
+      "- update_right: formed=1  (windows_count[char]=1, target_count[char]=1)\n",
+      "right=1\n",
       "\n",
-      "j = 2, char = D\n",
-      "substring: missing = 2, need = {'A': 0, 'B': 1, 'C': 1, 'D': -1}\n",
+      "char_right=D, windows_count[char]=1\n",
+      "right=2\n",
       "\n",
-      "j = 3, char = O\n",
-      "substring: missing = 2, need = {'A': 0, 'B': 1, 'C': 1, 'D': -1, 'O': -1}\n",
+      "char_right=O, windows_count[char]=1\n",
+      "right=3\n",
       "\n",
-      "j = 4, char = B\n",
-      "(need[char] = need[B] = 1) > 0\n",
-      "substring: missing = 1, need = {'A': 0, 'B': 0, 'C': 1, 'D': -1, 'O': -1}\n",
+      "char_right=B, windows_count[char]=1\n",
+      "- update_right: formed=2  (windows_count[char]=1, target_count[char]=1)\n",
+      "right=4\n",
       "\n",
-      "j = 5, char = E\n",
-      "substring: missing = 1, need = {'A': 0, 'B': 0, 'C': 1, 'D': -1, 'O': -1, 'E': -1}\n",
+      "char_right=E, windows_count[char]=1\n",
+      "right=5\n",
       "\n",
-      "j = 6, char = C\n",
-      "(need[char] = need[C] = 1) > 0\n",
-      "substring: missing = 0, need = {'A': 0, 'B': 0, 'C': 0, 'D': -1, 'O': -1, 'E': -1}\n",
-      "(missing = 0) == 0\n",
-      "new substring: missing = 1, need = {'A': 1, 'B': 0, 'C': 0, 'D': -1, 'O': -1, 'E': -1}\n",
-      "((end = 0) == 0) or (((j - i) = (6 - 0) = 6) < ((end - start) = (0 - 0) = 0))\n",
-      "new: start = 0, end = 6, i = 1\n",
-      "result: ADOBEC, best_result = ADOBEC\n",
+      "char_right=C, windows_count[char]=1\n",
+      "- update_right: formed=3  (windows_count[char]=1, target_count[char]=1)\n",
+      "-- char_left=A  (formed=3, required=3)\n",
+      "-- left=0, right=5\n",
+      "-- update: min_length=6, min_left=0, min_right=5\n",
+      "-- update_left: windows_count[char]=0\n",
+      "-- update_left: formed=2  (windows_count[char]=0, target_count[char]=1)\n",
+      "-- left=1\n",
+      "right=6\n",
       "\n",
-      "j = 7, char = O\n",
-      "substring: missing = 1, need = {'A': 1, 'B': 0, 'C': 0, 'D': -1, 'O': -2, 'E': -1}\n",
+      "char_right=O, windows_count[char]=2\n",
+      "right=7\n",
       "\n",
-      "j = 8, char = D\n",
-      "substring: missing = 1, need = {'A': 1, 'B': 0, 'C': 0, 'D': -2, 'O': -2, 'E': -1}\n",
+      "char_right=D, windows_count[char]=2\n",
+      "right=8\n",
       "\n",
-      "j = 9, char = E\n",
-      "substring: missing = 1, need = {'A': 1, 'B': 0, 'C': 0, 'D': -2, 'O': -2, 'E': -2}\n",
+      "char_right=E, windows_count[char]=2\n",
+      "right=9\n",
       "\n",
-      "j = 10, char = B\n",
-      "substring: missing = 1, need = {'A': 1, 'B': -1, 'C': 0, 'D': -2, 'O': -2, 'E': -2}\n",
+      "char_right=B, windows_count[char]=2\n",
+      "right=10\n",
       "\n",
-      "j = 11, char = A\n",
-      "(need[char] = need[A] = 1) > 0\n",
-      "substring: missing = 0, need = {'A': 0, 'B': -1, 'C': 0, 'D': -2, 'O': -2, 'E': -2}\n",
-      "(missing = 0) == 0\n",
-      "((i = 1) < (j = 11)) and ((need[s[i]] = need[D] = -2) < 0)\n",
-      "((i = 2) < (j = 11)) and ((need[s[i]] = need[O] = -2) < 0)\n",
-      "((i = 3) < (j = 11)) and ((need[s[i]] = need[B] = -1) < 0)\n",
-      "((i = 4) < (j = 11)) and ((need[s[i]] = need[E] = -2) < 0)\n",
-      "new substring: missing = 1, need = {'A': 0, 'B': 0, 'C': 1, 'D': -1, 'O': -1, 'E': -1}\n",
-      "new: start = 0, end = 6, i = 6\n",
-      "result: CODEBA, best_result = ADOBEC\n",
+      "char_right=A, windows_count[char]=1\n",
+      "- update_right: formed=3  (windows_count[char]=1, target_count[char]=1)\n",
+      "-- char_left=D  (formed=3, required=3)\n",
+      "-- left=1, right=10\n",
+      "-- update_left: windows_count[char]=1\n",
+      "-- left=2\n",
+      "-- char_left=O  (formed=3, required=3)\n",
+      "-- left=2, right=10\n",
+      "-- update_left: windows_count[char]=1\n",
+      "-- left=3\n",
+      "-- char_left=B  (formed=3, required=3)\n",
+      "-- left=3, right=10\n",
+      "-- update_left: windows_count[char]=1\n",
+      "-- left=4\n",
+      "-- char_left=E  (formed=3, required=3)\n",
+      "-- left=4, right=10\n",
+      "-- update_left: windows_count[char]=1\n",
+      "-- left=5\n",
+      "-- char_left=C  (formed=3, required=3)\n",
+      "-- left=5, right=10\n",
+      "-- update_left: windows_count[char]=0\n",
+      "-- update_left: formed=2  (windows_count[char]=0, target_count[char]=1)\n",
+      "-- left=6\n",
+      "right=11\n",
       "\n",
-      "j = 12, char = N\n",
-      "substring: missing = 1, need = {'A': 0, 'B': 0, 'C': 1, 'D': -1, 'O': -1, 'E': -1, 'N': -1}\n",
+      "char_right=N, windows_count[char]=1\n",
+      "right=12\n",
       "\n",
-      "j = 13, char = C\n",
-      "(need[char] = need[C] = 1) > 0\n",
-      "substring: missing = 0, need = {'A': 0, 'B': 0, 'C': 0, 'D': -1, 'O': -1, 'E': -1, 'N': -1}\n",
-      "(missing = 0) == 0\n",
-      "((i = 6) < (j = 13)) and ((need[s[i]] = need[O] = -1) < 0)\n",
-      "((i = 7) < (j = 13)) and ((need[s[i]] = need[D] = -1) < 0)\n",
-      "((i = 8) < (j = 13)) and ((need[s[i]] = need[E] = -1) < 0)\n",
-      "new substring: missing = 1, need = {'A': 0, 'B': 1, 'C': 0, 'D': 0, 'O': 0, 'E': 0, 'N': -1}\n",
-      "((end = 6) == 0) or (((j - i) = (13 - 9) = 4) < ((end - start) = (6 - 0) = 6))\n",
-      "new: start = 9, end = 13, i = 10\n",
-      "result: BANC, best_result = BANC\n"
+      "char_right=C, windows_count[char]=1\n",
+      "- update_right: formed=3  (windows_count[char]=1, target_count[char]=1)\n",
+      "-- char_left=O  (formed=3, required=3)\n",
+      "-- left=6, right=12\n",
+      "-- update_left: windows_count[char]=0\n",
+      "-- left=7\n",
+      "-- char_left=D  (formed=3, required=3)\n",
+      "-- left=7, right=12\n",
+      "-- update_left: windows_count[char]=0\n",
+      "-- left=8\n",
+      "-- char_left=E  (formed=3, required=3)\n",
+      "-- left=8, right=12\n",
+      "-- update: min_length=5, min_left=8, min_right=12\n",
+      "-- update_left: windows_count[char]=0\n",
+      "-- left=9\n",
+      "-- char_left=B  (formed=3, required=3)\n",
+      "-- left=9, right=12\n",
+      "-- update: min_length=4, min_left=9, min_right=12\n",
+      "-- update_left: windows_count[char]=0\n",
+      "-- update_left: formed=2  (windows_count[char]=0, target_count[char]=1)\n",
+      "-- left=10\n",
+      "right=13\n"
      ]
     },
     {
@@ -151,6 +206,13 @@
     "t = \"ABC\"\n",
     "Solution().minWindow(s, t)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -169,7 +231,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.11.2"
   },
   "orig_nbformat": 4
  },
