--- a/206. Reverse Linked List.ipynb
+++ b/206. Reverse Linked List.ipynb
@@ -24,8 +24,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* 時間複雜度: O($n$)\n",
-    "* 空間複雜度: O($1$)"
+    "* 時間複雜度: O( $n$ )\n",
+    "* 空間複雜度: O( $1$ )"
    ]
   },
   {
@@ -247,11 +247,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "d8c1a87e4764ea7881547c536887df2e9c9ef9a1d8b44ae688e9c35499972fab"
-  },
   "kernelspec": {
-   "display_name": "Python 3.8.9 ('.venv': venv)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
