--- a/287. Find the Duplicate Number.ipynb
+++ b/287. Find the Duplicate Number.ipynb
@@ -25,20 +25,21 @@
    "source": [
     "### 題目\n",
     "nums = [1,3,4,2,5,2]  \n",
-    "\n",
-    "索引:   0    1    3    2    4    5    2    4    5  \n",
-    "值:     1 -> 3 -> 2 -> 4 -> 5 -> 2 -> 4 -> 5 -> 2  (2為循環入口)  \n",
-    "&emsp;&emsp;&emsp;&emsp;&emsp;&nbsp;&nbsp;&nbsp;v&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;v&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;v\n",
+    "```\n",
+    "索引:   0    1    3    2    4    5    2    4    5\n",
+    "值:     1 -> 3 -> 2 -> 4 -> 5 -> 2 -> 4 -> 5 -> 2  (2為循環入口)\n",
+    "                  v              v              v\n",
+    "```\n",
     "\n",
     "### 指針行走路徑\n",
     "慢指針: 1 -> 3 -> 2 -> 4  \n",
     "快指針: 1 -> 2 -> 5 -> 4  \n",
     "\n",
     "### 變數定義\n",
-    "- 起點到循環入口的距離為 `a = 2`\n",
-    "- 循環入口到相遇點的距離為 `b = 1`\n",
-    "- 循環的總長度為 `c = 3`\n",
-    "- 相遇時快指針多繞的循環圈數 `k = 1`\n",
+    "- 起點到循環入口的距離為 `a = 2` (慢指針: 1 -> 3 -> 2)\n",
+    "- 循環入口到相遇點的距離為 `b = 1` (慢指針: 2 -> 4)\n",
+    "- 循環的總長度為 `c = 3` (2 -> 4 -> 5 -> 2)\n",
+    "- 相遇時快指針多繞的循環圈數 `k = 1` (快指針: [2 -> 4 -> 5 -> 2] -> 4)\n",
     "\n",
     "### 數學推導\n",
     "- 慢指針從起點到相遇點的距離  \n",
@@ -49,7 +50,7 @@
     "$\\because$ 快指針是慢指針的2倍，且相遇時 `k=1`  \n",
     "2 (`a` + `b`) = `a` + `kc` + `b`  \n",
     "=> `a` + `b` = `kc`  \n",
-    "=> `a` + `b` = `c`  \n",
+    "=> `a` + `b` = `c`  ($\\because$ `k=1`)  \n",
     "=> `a` = `c` - `b`  \n",
     "\n",
     "$\\therefore$ 從起點到循環入口的距離 `a`，與從相遇點繞回循環入口的距離 `c - b` 是相等的。\n",
