--- a/92. Reverse Linked List II.ipynb
+++ b/92. Reverse Linked List II.ipynb
@@ -15,8 +15,131 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* 時間複雜度: O( $n$ )\n",
+    "* 空間複雜度: O( $1$ )"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Definition for singly-linked list.\n",
+    "class ListNode:\n",
+    "    def __init__(self, val=0, next=None):\n",
+    "        self.val = val\n",
+    "        self.next = next"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "head = ListNode(\n",
+    "    val = 1,\n",
+    "    next = ListNode(\n",
+    "        val = 2,\n",
+    "        next = ListNode(\n",
+    "            val = 3,\n",
+    "            next = ListNode(\n",
+    "                val = 4,\n",
+    "                next = ListNode(\n",
+    "                    val = 5,\n",
+    "                    next = None\n",
+    "                )\n",
+    "            )\n",
+    "        )\n",
+    "    )\n",
+    ")\n",
+    "left = 2\n",
+    "right = 4\n",
+    "\n",
+    "# 1 -> 4 -> 3 -> 2 -> 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import Optional\n",
+    "\n",
+    "class Solution:\n",
+    "    def reverseBetween(self, head: Optional[ListNode], left: int, right: int) -> Optional[ListNode]:\n",
+    "        # 如果 left == right，無需反轉，直接返回原鏈結串列\n",
+    "        if left == right:\n",
+    "            return head\n",
+    "\n",
+    "        # 建立一個虛擬節點(dummy node)，指向頭節點，方便處理邊界情況\n",
+    "        dummy = ListNode(0, head)\n",
+    "        pre = dummy  # pre 將指向反轉區間的前一個節點\n",
+    "\n",
+    "        # 1. 尋找第 left 節點的前一個節點 (pre)\n",
+    "        for _ in range(left - 1):  # 遍歷到第 left-1 節點\n",
+    "            pre = pre.next\n",
+    "\n",
+    "        # print(f\"{dummy=}\\n{pre=}\\n\")\n",
+    "\n",
+    "        # 2. 開始反轉節點\n",
+    "        # cur 是反轉區間的第一個節點\n",
+    "        current = pre.next\n",
+    "        previous = None  # 用於反轉鏈結串列\n",
+    "        for _ in range(left, right + 1): # 反轉從 left 到 right 的節點\n",
+    "            next_tmp = current.next # 暫存下一個節點\n",
+    "            current.next = previous # 將當前節點的指針指向前一個節點\n",
+    "            previous = current\n",
+    "            current = next_tmp\n",
+    "\n",
+    "        #     print(f\"{previous=}\\n{current=}\")\n",
+    "        # print(f\"{pre=}\\n\")\n",
+    "\n",
+    "        # 3. 重新連接反轉後的區間\n",
+    "        pre.next.next = current # 將反轉區間的尾節點指向反轉後的後續部分\n",
+    "        # print(f\"{pre=}\")\n",
+    "        pre.next = previous # 將反轉區間的起始部分連接到前面的部分\n",
+    "        # print(f\"{pre=}\")\n",
+    "        # print(f\"{dummy=}\"\")\n",
+    "\n",
+    "        return dummy.next"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 4 3 2 5 "
+     ]
+    }
+   ],
+   "source": [
+    "result = Solution().reverseBetween(head, left, right)\n",
+    "while result:\n",
+    "    print(result.val, end = ' ')\n",
+    "    result = result.next"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### old Method"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,11 +217,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "d8c1a87e4764ea7881547c536887df2e9c9ef9a1d8b44ae688e9c35499972fab"
-  },
   "kernelspec": {
-   "display_name": "Python 3.8.9 ('.venv': venv)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -112,7 +232,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.11.2"
   },
   "orig_nbformat": 4
  },
