--- a/215. Kth Largest Element in an Array.ipynb
+++ b/215. Kth Largest Element in an Array.ipynb
@@ -8,6 +8,419 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List\n",
+    "\n",
+    "class Solution:\n",
+    "    def findKthLargest(self, nums: List[int], k: int) -> int:\n",
+    "        print(f\"{nums=}\")\n",
+    "        \n",
+    "        heap = nums[:k]\n",
+    "        self.heapify(heap)\n",
+    "\n",
+    "        for num in nums[k:]:\n",
+    "            if num > heap[0]:\n",
+    "                popped = self.heappop(heap)\n",
+    "                self.heappush(heap, num)\n",
+    "\n",
+    "        #         print(f\"-> ({num} > {popped}) -> pop: {popped}, push: {num}\")\n",
+    "        #         print(f\"-> {heap=}\\n\")\n",
+    "\n",
+    "        return heap[0]\n",
+    "    \n",
+    "    def heapify(self, heap):\n",
+    "        \"\"\"建立 min heap，時間複雜度 O(n)\"\"\"\n",
+    "        print(f\"\\n<< heapify >>\\n\")\n",
+    "\n",
+    "        heap_size = len(heap)\n",
+    "        print(f\"{heap=}, {heap_size=}, last non-leaf node: {heap_size//2 - 1}\")\n",
+    "\n",
+    "        # 從最後一個非葉節點 (index - 1) // 2 = ((heap_size-1) - 1) // 2  = (heap_size // 2 - 1) 開始往回做 sift down。(tip: 長度比索引多 1)\n",
+    "        for position in range((heap_size//2 - 1), -1, -1):\n",
+    "            print(\"_\" * 100)\n",
+    "            print(f\"-> {heap=}, {position=}\")\n",
+    "            self._sift_down(heap, position, heap_size)\n",
+    "\n",
+    "    def heappop(self, heap):\n",
+    "        \"\"\"取出並移除最小值，時間複雜度 O(log n)\"\"\"\n",
+    "        print(f\"\\n<< heappop >>\\n\")\n",
+    "\n",
+    "        if not heap:\n",
+    "            return None\n",
+    "        \n",
+    "        min_value = heap[0] # 保存最小值以便返回\n",
+    "        print(f\"{min_value=}\")\n",
+    "\n",
+    "        # 將最後一個節點值放到根節點，以保持完全二叉樹的結構\n",
+    "        heap[0] = heap[-1]\n",
+    "        print(f\" (heap[0]={min_value}) change to (heap[-1]={heap[-1]}) -> {heap=}\")\n",
+    "        heap.pop() # 刪除最後一個節點值\n",
+    "        print(f\"-> pop: {heap[-1]=} -> {heap=}\")\n",
+    "\n",
+    "        # 如果 heap 不為空，則直接對根節點進行 sift down，其他節點不需要調整\n",
+    "        if heap:\n",
+    "            self._sift_down(heap, position=0, heap_size=len(heap))\n",
+    "\n",
+    "        return min_value\n",
+    "\n",
+    "    def heappush(self, heap, num):\n",
+    "        \"\"\"插入新值，時間複雜度 O(log n)\"\"\"\n",
+    "        print(f\"\\n<< heappush >>\\n\")\n",
+    "\n",
+    "        # 先將新值加到最後\n",
+    "        heap.append(num)\n",
+    "        print(f\"-> push: {num=} -> {heap=}\")\n",
+    "\n",
+    "        # 對最後一個索引(新加入的值)進行 sift up\n",
+    "        self._sift_up(heap, position=len(heap) - 1)\n",
+    "\n",
+    "\n",
+    "    def _sift_down(self, heap, position, heap_size):\n",
+    "        \"\"\"將節點值向上移動到適當位置\"\"\"\n",
+    "        item = heap[position] # 當前節點值\n",
+    "        print(f\"\\n--> {item=}\\n\")\n",
+    "        while position < heap_size:\n",
+    "            # 左右子節點索引\n",
+    "            left = 2 * position + 1\n",
+    "            right = 2 * position + 2\n",
+    "            print(f\"--> {position=}, {left=}, {right=}\")\n",
+    "\n",
+    "            # 如果左子節點不存在，表示已經到達葉節點\n",
+    "            if left >= heap_size:\n",
+    "                print(f\"--> ({left=}) >= ({heap_size=}) -> break (reached leaf node)\")\n",
+    "                break\n",
+    "             \n",
+    "            # 找出左右子節點中較小的一個\n",
+    "            if (right < heap_size) and (heap[left] > heap[right]):\n",
+    "                smaller = right\n",
+    "                print(f\"--> ({heap[left]=} > {heap[right]=}) -> {smaller=}\")\n",
+    "            else:\n",
+    "                smaller = left\n",
+    "                print(f\"--> ({right=} >= {heap_size=}) -> {smaller=}\") if right >= heap_size else print(f\"--> ({heap[left]=} <= {heap[right]=}) -> {smaller=}\")\n",
+    "\n",
+    "            # 如果父節點值小於等於左右子節點，表示下方已經是 min heap\n",
+    "            if item <= heap[smaller]:\n",
+    "                print(f\"--> ({item=} <= {heap[smaller]=}) -> break (already min heap)\")\n",
+    "                break\n",
+    "            \n",
+    "            print(f\"--> (heap[{position}]={heap[position]}) change to (heap[{smaller}]={heap[smaller]})\")\n",
+    "            heap[position] = heap[smaller] # 將較小的子節點上移\n",
+    "            position = smaller # 更新目前節點位置\n",
+    "            print(f\"--> {heap=}, {position=}\")\n",
+    "            print(\"-\" * 100)\n",
+    "\n",
+    "        heap[position] = item # 將原本節點值放入適當位置\n",
+    "        print(f\"--> (heap[{position}]={heap[position]}) change to ({item=})\")\n",
+    "        print(f\"--> {heap=}\")\n",
+    "\n",
+    "\n",
+    "    def _sift_up(self, heap, position):\n",
+    "        \"\"\"將節點值向上移動到適當位置\"\"\"\n",
+    "        item = heap[position] # 當前節點值\n",
+    "        print(f\"\\n--> {item=}\\n\")\n",
+    "\n",
+    "        while position > 0:\n",
+    "            parent = (position - 1) // 2 # 父節點索引\n",
+    "            print(f\"--> {position=}, {parent=}\")\n",
+    "\n",
+    "            # 如果父節點值小於等於當前節點值，表示已經是 min heap\n",
+    "            if heap[parent] <= item:\n",
+    "                print(f\"--> ({heap[parent]=} <= {item=}) -> break (already min heap)\")\n",
+    "                break\n",
+    "\n",
+    "            # 將父節點值下移\n",
+    "            print(f\"--> (heap[{position}]={heap[position]}) change to (heap[{parent}]={heap[parent]})\")\n",
+    "            heap[position] = heap[parent]\n",
+    "            position = parent\n",
+    "            print(f\"--> {heap=}, {position=}\")\n",
+    "            print(\"-\" * 100)\n",
+    "        \n",
+    "        heap[position] = item # 將原本節點值放入適當位置\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nums=[3, 2, 3, 2, 1, 4, 5, 6, 5]\n",
+      "\n",
+      "<< heapify >>\n",
+      "\n",
+      "heap=[3, 2, 3, 2], heap_size=4, last non-leaf node: 1\n",
+      "____________________________________________________________________________________________________\n",
+      "-> heap=[3, 2, 3, 2], position=1\n",
+      "\n",
+      "--> item=2\n",
+      "\n",
+      "--> position=1, left=3, right=4\n",
+      "--> (right=4 >= heap_size=4) -> smaller=3\n",
+      "--> (item=2 <= heap[smaller]=2) -> break (already min heap)\n",
+      "--> (heap[1]=2) change to (item=2)\n",
+      "--> heap=[3, 2, 3, 2]\n",
+      "____________________________________________________________________________________________________\n",
+      "-> heap=[3, 2, 3, 2], position=0\n",
+      "\n",
+      "--> item=3\n",
+      "\n",
+      "--> position=0, left=1, right=2\n",
+      "--> (heap[left]=2 <= heap[right]=3) -> smaller=1\n",
+      "--> (heap[0]=3) change to (heap[1]=2)\n",
+      "--> heap=[2, 2, 3, 2], position=1\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "--> position=1, left=3, right=4\n",
+      "--> (right=4 >= heap_size=4) -> smaller=3\n",
+      "--> (heap[1]=2) change to (heap[3]=2)\n",
+      "--> heap=[2, 2, 3, 2], position=3\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "--> position=3, left=7, right=8\n",
+      "--> (left=7) >= (heap_size=4) -> break (reached leaf node)\n",
+      "--> (heap[3]=3) change to (item=3)\n",
+      "--> heap=[2, 2, 3, 3]\n",
+      "\n",
+      "<< heappop >>\n",
+      "\n",
+      "min_value=2\n",
+      " (heap[0]=2) change to (heap[-1]=3) -> heap=[3, 2, 3, 3]\n",
+      "-> pop: heap[-1]=3 -> heap=[3, 2, 3]\n",
+      "\n",
+      "--> item=3\n",
+      "\n",
+      "--> position=0, left=1, right=2\n",
+      "--> (heap[left]=2 <= heap[right]=3) -> smaller=1\n",
+      "--> (heap[0]=3) change to (heap[1]=2)\n",
+      "--> heap=[2, 2, 3], position=1\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "--> position=1, left=3, right=4\n",
+      "--> (left=3) >= (heap_size=3) -> break (reached leaf node)\n",
+      "--> (heap[1]=3) change to (item=3)\n",
+      "--> heap=[2, 3, 3]\n",
+      "\n",
+      "<< heappush >>\n",
+      "\n",
+      "-> push: num=4 -> heap=[2, 3, 3, 4]\n",
+      "\n",
+      "--> item=4\n",
+      "\n",
+      "--> position=3, parent=1\n",
+      "--> (heap[parent]=3 <= item=4) -> break (already min heap)\n",
+      "\n",
+      "<< heappop >>\n",
+      "\n",
+      "min_value=2\n",
+      " (heap[0]=2) change to (heap[-1]=4) -> heap=[4, 3, 3, 4]\n",
+      "-> pop: heap[-1]=3 -> heap=[4, 3, 3]\n",
+      "\n",
+      "--> item=4\n",
+      "\n",
+      "--> position=0, left=1, right=2\n",
+      "--> (heap[left]=3 <= heap[right]=3) -> smaller=1\n",
+      "--> (heap[0]=4) change to (heap[1]=3)\n",
+      "--> heap=[3, 3, 3], position=1\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "--> position=1, left=3, right=4\n",
+      "--> (left=3) >= (heap_size=3) -> break (reached leaf node)\n",
+      "--> (heap[1]=4) change to (item=4)\n",
+      "--> heap=[3, 4, 3]\n",
+      "\n",
+      "<< heappush >>\n",
+      "\n",
+      "-> push: num=5 -> heap=[3, 4, 3, 5]\n",
+      "\n",
+      "--> item=5\n",
+      "\n",
+      "--> position=3, parent=1\n",
+      "--> (heap[parent]=4 <= item=5) -> break (already min heap)\n",
+      "\n",
+      "<< heappop >>\n",
+      "\n",
+      "min_value=3\n",
+      " (heap[0]=3) change to (heap[-1]=5) -> heap=[5, 4, 3, 5]\n",
+      "-> pop: heap[-1]=3 -> heap=[5, 4, 3]\n",
+      "\n",
+      "--> item=5\n",
+      "\n",
+      "--> position=0, left=1, right=2\n",
+      "--> (heap[left]=4 > heap[right]=3) -> smaller=2\n",
+      "--> (heap[0]=5) change to (heap[2]=3)\n",
+      "--> heap=[3, 4, 3], position=2\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "--> position=2, left=5, right=6\n",
+      "--> (left=5) >= (heap_size=3) -> break (reached leaf node)\n",
+      "--> (heap[2]=5) change to (item=5)\n",
+      "--> heap=[3, 4, 5]\n",
+      "\n",
+      "<< heappush >>\n",
+      "\n",
+      "-> push: num=6 -> heap=[3, 4, 5, 6]\n",
+      "\n",
+      "--> item=6\n",
+      "\n",
+      "--> position=3, parent=1\n",
+      "--> (heap[parent]=4 <= item=6) -> break (already min heap)\n",
+      "\n",
+      "<< heappop >>\n",
+      "\n",
+      "min_value=3\n",
+      " (heap[0]=3) change to (heap[-1]=6) -> heap=[6, 4, 5, 6]\n",
+      "-> pop: heap[-1]=5 -> heap=[6, 4, 5]\n",
+      "\n",
+      "--> item=6\n",
+      "\n",
+      "--> position=0, left=1, right=2\n",
+      "--> (heap[left]=4 <= heap[right]=5) -> smaller=1\n",
+      "--> (heap[0]=6) change to (heap[1]=4)\n",
+      "--> heap=[4, 4, 5], position=1\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "--> position=1, left=3, right=4\n",
+      "--> (left=3) >= (heap_size=3) -> break (reached leaf node)\n",
+      "--> (heap[1]=6) change to (item=6)\n",
+      "--> heap=[4, 6, 5]\n",
+      "\n",
+      "<< heappush >>\n",
+      "\n",
+      "-> push: num=5 -> heap=[4, 6, 5, 5]\n",
+      "\n",
+      "--> item=5\n",
+      "\n",
+      "--> position=3, parent=1\n",
+      "--> (heap[3]=5) change to (heap[1]=6)\n",
+      "--> heap=[4, 6, 5, 6], position=1\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "--> position=1, parent=0\n",
+      "--> (heap[parent]=4 <= item=5) -> break (already min heap)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nums = [3,2,3,2,1,4,5,6,5]\n",
+    "k = 4\n",
+    "Solution().findKthLargest(nums, k) # 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List\n",
+    "import heapq\n",
+    "\n",
+    "class Solution:\n",
+    "    def findKthLargest(self, nums: List[int], k: int) -> int:\n",
+    "        print(f\"{nums=}, {k=}\")\n",
+    "\n",
+    "        heap = nums[:k]\n",
+    "        heapq.heapify(heap)\n",
+    "        print(f\"{nums[:k]=}\")\n",
+    "        print(f\"{heap=}\\n\")\n",
+    "\n",
+    "        for num in nums[k:]:\n",
+    "            if num > heap[0]:\n",
+    "                popped = heapq.heappop(heap)\n",
+    "                heapq.heappush(heap, num)\n",
+    "\n",
+    "                print(f\"-> ({num} > {popped}) -> pop: {popped}, push: {num}\")\n",
+    "                print(f\"-> {heap=}\\n\")\n",
+    "\n",
+    "        return heap[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nums=[3, 2, 3, 1, 2, 4, 5, 5, 6], k=4\n",
+      "nums[:k]=[3, 2, 3, 1]\n",
+      "heap=[1, 2, 3, 3]\n",
+      "\n",
+      "-> (2 > 1) -> pop: 1, push: 2\n",
+      "-> heap=[2, 2, 3, 3]\n",
+      "\n",
+      "-> (4 > 2) -> pop: 2, push: 4\n",
+      "-> heap=[2, 3, 3, 4]\n",
+      "\n",
+      "-> (5 > 2) -> pop: 2, push: 5\n",
+      "-> heap=[3, 3, 4, 5]\n",
+      "\n",
+      "-> (5 > 3) -> pop: 3, push: 5\n",
+      "-> heap=[3, 5, 4, 5]\n",
+      "\n",
+      "-> (6 > 3) -> pop: 3, push: 6\n",
+      "-> heap=[4, 5, 5, 6]\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nums = [3,2,3,1,2,4,5,5,6]\n",
+    "k = 4\n",
+    "Solution().findKthLargest(nums, k) # 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -17,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -26,7 +439,7 @@
        "5"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +472,7 @@
        "5"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,7 +521,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.7 ('.sar': venv)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -122,14 +535,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.7"
+   "version": "3.11.2"
   },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "4b3bed0e3e859eed817920df843b60ae28bf236cd2c20594d20757d4a26e1783"
-   }
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
