--- a/215. Kth Largest Element in an Array.ipynb
+++ b/215. Kth Largest Element in an Array.ipynb
@@ -8,45 +8,71 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Heap 手動"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* 時間複雜度: O( $n * log {_2} {k}$ )  \n",
+    "  其中 $n$ 為 nums 的長度。\n",
+    "  * heapify的時間複雜度 O( $k$ )\n",
+    "    * 節點數量分佈\n",
+    "      * 深度為 $d$ 的節點數量約為 $2^d$\n",
+    "    * 操作次數分佈\n",
+    "      * 最大深度為 $log {_2} {k}$\n",
+    "      * 深度 $d$ 的節點，進行`sift down`所需的最多次數為 $(log {_2} {k}) -d$\n",
+    "    * 總時間複雜度\n",
+    "      $$\n",
+    "      \\text{總成本} = \\sum_{d=0}^{\\log_2 k} (\\text{節點數量} \\times \\text{操作次數})\n",
+    "      = \\sum_{d=0}^{\\log_2 k} (2^d \\times ((log_2 k) - d))\n",
+    "      $$\n",
+    "      約等於 O( $k$ )\n",
+    "* 空間複雜度: O( $k$ )"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "from typing import List\n",
     "\n",
     "class Solution:\n",
-    "    def findKthLargest(self, nums: List[int], k: int) -> int:\n",
+    "    def findKthLargest(self, nums: List[int], k: int) -> int: # time: O(k) + O((n-k) * log k) = O(n * log k)，因為 (n >= k) \n",
     "        print(f\"{nums=}\")\n",
     "        \n",
-    "        heap = nums[:k]\n",
-    "        self.heapify(heap)\n",
+    "        heap = nums[:k] # space: O(k)\n",
+    "        self.heapify(heap) # time: O(k)\n",
     "\n",
-    "        for num in nums[k:]:\n",
+    "        # time: O((n-k) * log k)\n",
+    "        for num in nums[k:]: # time: O(n-k)\n",
     "            if num > heap[0]:\n",
-    "                popped = self.heappop(heap)\n",
-    "                self.heappush(heap, num)\n",
-    "\n",
-    "        #         print(f\"-> ({num} > {popped}) -> pop: {popped}, push: {num}\")\n",
-    "        #         print(f\"-> {heap=}\\n\")\n",
+    "                popped = self.heappop(heap) # time: O(log k)\n",
+    "                self.heappush(heap, num) # time: O(log k)\n",
     "\n",
     "        return heap[0]\n",
     "    \n",
     "    def heapify(self, heap):\n",
-    "        \"\"\"建立 min heap，時間複雜度 O(n)\"\"\"\n",
+    "        \"\"\"建立 min heap，時間複雜度 O(k)， k 為 heap 長度\"\"\"\n",
     "        print(f\"\\n<< heapify >>\\n\")\n",
     "\n",
     "        heap_size = len(heap)\n",
     "        print(f\"{heap=}, {heap_size=}, last non-leaf node: {heap_size//2 - 1}\")\n",
     "\n",
     "        # 從最後一個非葉節點 (index - 1) // 2 = ((heap_size-1) - 1) // 2  = (heap_size // 2 - 1) 開始往回做 sift down。(tip: 長度比索引多 1)\n",
-    "        for position in range((heap_size//2 - 1), -1, -1):\n",
+    "        for position in range((heap_size//2 - 1), -1, -1): # time: O(k)\n",
     "            print(\"_\" * 100)\n",
     "            print(f\"-> {heap=}, {position=}\")\n",
     "            self._sift_down(heap, position, heap_size)\n",
     "\n",
     "    def heappop(self, heap):\n",
-    "        \"\"\"取出並移除最小值，時間複雜度 O(log n)\"\"\"\n",
+    "        \"\"\"取出並移除最小值，時間複雜度 O(log k)， k 為 heap 長度 (完全二叉樹的高度與節點數量呈對數關係)\"\"\"\n",
     "        print(f\"\\n<< heappop >>\\n\")\n",
     "\n",
     "        if not heap:\n",
@@ -68,7 +94,7 @@
     "        return min_value\n",
     "\n",
     "    def heappush(self, heap, num):\n",
-    "        \"\"\"插入新值，時間複雜度 O(log n)\"\"\"\n",
+    "        \"\"\"插入新值，時間複雜度 O(log k)， k 為 heap 長度 (完全二叉樹的高度與節點數量呈對數關係)\"\"\"\n",
     "        print(f\"\\n<< heappush >>\\n\")\n",
     "\n",
     "        # 先將新值加到最後\n",
@@ -144,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +331,7 @@
        "4"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,22 +343,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Heap package"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,45 +380,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "nums=[3, 2, 3, 1, 2, 4, 5, 5, 6], k=4\n",
-      "nums[:k]=[3, 2, 3, 1]\n",
-      "heap=[1, 2, 3, 3]\n",
-      "\n",
-      "-> (2 > 1) -> pop: 1, push: 2\n",
-      "-> heap=[2, 2, 3, 3]\n",
-      "\n",
-      "-> (4 > 2) -> pop: 2, push: 4\n",
-      "-> heap=[2, 3, 3, 4]\n",
-      "\n",
-      "-> (5 > 2) -> pop: 2, push: 5\n",
-      "-> heap=[3, 3, 4, 5]\n",
-      "\n",
-      "-> (5 > 3) -> pop: 3, push: 5\n",
-      "-> heap=[3, 5, 4, 5]\n",
-      "\n",
-      "-> (6 > 3) -> pop: 3, push: 6\n",
-      "-> heap=[4, 5, 5, 6]\n",
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "nums = [3,2,3,1,2,4,5,5,6]\n",
     "k = 4\n",
@@ -407,18 +390,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Sort"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -430,20 +406,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Solution:\n",
     "    def findKthLargest(self, nums, k):\n",
@@ -463,20 +428,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Solution:\n",
     "    def findKthLargest(self, nums, k):\n",
