--- a/347. Top K Frequent Elements.ipynb
+++ b/347. Top K Frequent Elements.ipynb
@@ -16,6 +16,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "可參考215. 手動建立heap"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
