--- a/347. Top K Frequent Elements.ipynb
+++ b/347. Top K Frequent Elements.ipynb
@@ -33,14 +33,14 @@
     "\n",
     "class Solution:\n",
     "    def topKFrequent(self, nums: List[int], k: int) -> List[int]:\n",
-    "        count = {}  # 每個數字出現次數的字典 # space: O(m)，m 為不重複數字的個數，m ≈ n\n",
+    "        count_dict = {}  # 每個數字出現次數的字典 # space: O(m)，m 為不重複數字的個數，m ≈ n\n",
     "        for num in nums: # time: O(n)\n",
     "            # 更新字典中的計數，若該數字尚未存在則預設為 0\n",
-    "            count[num] = count.get(num, 0) + 1\n",
-    "        print(f\"{count=}\")\n",
+    "            count_dict[num] = count_dict.get(num, 0) + 1\n",
+    "        print(f\"{count_dict=}\")\n",
     "\n",
     "        heap = []  # 最小堆，存儲前 k 個頻率最高的數字 # space: O(k)\n",
-    "        for num, count in count.items(): # time: O(m), m 為不重複數字的個數，m ≈ n\n",
+    "        for num, count in count_dict.items(): # time: O(m), m 為不重複數字的個數，m ≈ n\n",
     "            if len(heap) < k: # 當堆的長度小於 k，直接將 (頻率, 數字) 加入堆中                \n",
     "                heapq.heappush(heap, [count, num]) # 將當前數字加入堆中，time: O(logk)\n",
     "                print(f\"{heap=}\")\n",
@@ -68,7 +68,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "count={1: 3, 2: 2, 3: 4}\n",
+      "count_dict={1: 3, 2: 2, 3: 4}\n",
       "heap=[[3, 1]]\n",
       "heap=[[2, 2], [3, 1]]\n",
       "heap=[[2, 2], [3, 1], [4, 3]]\n",
@@ -89,7 +89,7 @@
    ],
    "source": [
     "nums = [1,1,1,2,2,3,3,3,3]; k = 2\n",
-    "Solution().topKFrequent(nums, k)"
+    "Solution().topKFrequent(nums, k) # [3, 1]"
    ]
   }
  ],
