--- a/33. Search in Rotated Sorted Array.ipynb
+++ b/33. Search in Rotated Sorted Array.ipynb
@@ -11,8 +11,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**時間複雜度: O(log(n))**  \n",
-    "**空間複雜度: O(1)**"
+    "**時間複雜度: O( $log{_2}{n}$ )**  \n",
+    "**空間複雜度: O( $1$ )**"
    ]
   },
   {
@@ -29,8 +29,8 @@
     "        if not nums:\n",
     "            return -1\n",
     "\n",
-    "        left, right = 0, len(nums) - 1\n",
-    "        while left <= right:\n",
+    "        left, right = 0, len(nums) - 1 # space: O(1)\n",
+    "        while left <= right: # time: O(logn)\n",
     "            mid = (left + right) // 2\n",
     "            print(f\"\\nleft = {left}, right = {right}, mid = {mid}\")\n",
     "\n",
@@ -40,22 +40,22 @@
     "            # 判斷哪一部分是有序的\n",
     "            if nums[mid] < nums[right]: # mid ~ right一定有序，只需判斷target是否在區間內\n",
     "                print(f\"right({nums[mid]} ~ {nums[right]}): (nums[mid] = {nums[mid]}) < (nums[right] = {nums[right]})\")\n",
-    "                if target > nums[mid] and target <= nums[right]: # 在區間內，左側邊緣+1\n",
-    "                    print(f\"In - (nums[mid] = {nums[mid]}) < (target = {target}) <= (nums[right] = {nums[right]})\")\n",
+    "                if  nums[mid] < target <= nums[right]: # 在區間內，左側邊緣+1\n",
+    "                    print(f\"In - ({nums[mid]=}) < ({target=}) <= ({nums[right]=})\")\n",
     "                    left = mid + 1\n",
     "\n",
     "                else: # 不在區間內，右側邊緣-1\n",
-    "                    print(f\"Not in - (target = {target}) <= (nums[mid] = {nums[mid]}) or (target = {target}) > (nums[right] = {nums[right]})\")\n",
+    "                    print(f\"Not in - ({nums[mid]=}) < ({target=}) <= ({nums[right]=})\")\n",
     "                    right = mid - 1\n",
     "\n",
     "            else: # left ~ mid一定有序，只需判斷target是否在區間內\n",
     "                print(f\"left({nums[left]} ~ {nums[mid]}): (nums[mid] = {nums[mid]}) >= (nums[right] = {nums[right]})\")\n",
-    "                if target < nums[mid] and target >= nums[left]: # 在區間內，右側邊緣-1\n",
-    "                    print(f\"In - (nums[left] <= {nums[left]}) < (target = {target}) < (nums[mid] = {nums[mid]})\")\n",
+    "                if nums[left] <= target < nums[mid]: # 在區間內，右側邊緣-1\n",
+    "                    print(f\"In - ({nums[left]=}) < ({target=}) < ({nums[mid]=})\")\n",
     "                    right = mid - 1\n",
     "\n",
     "                else: # 不在區間內，左側邊緣+1\n",
-    "                    print(f\"Not in - (target = {target}) >= (nums[mid] = {nums[mid]}) or (target = {target}) < (nums[left] = {nums[left]})\")\n",
+    "                    print(f\"Not in - ({nums[left]=}) < ({target=}) < ({nums[mid]=})\")\n",
     "                    left = mid + 1\n",
     "\n",
     "        return -1            "
@@ -74,11 +74,11 @@
       "\n",
       "left = 0, right = 6, mid = 3\n",
       "left(4 ~ 7): (nums[mid] = 7) >= (nums[right] = 2)\n",
-      "Not in - (target = 0) >= (nums[mid] = 7) or (target = 0) < (nums[left] = 4)\n",
+      "Not in - (nums[left]=4) < (target=0) < (nums[mid]=7)\n",
       "\n",
       "left = 4, right = 6, mid = 5\n",
       "right(1 ~ 2): (nums[mid] = 1) < (nums[right] = 2)\n",
-      "Not in - (target = 0) <= (nums[mid] = 1) or (target = 0) > (nums[right] = 2)\n",
+      "Not in - (nums[mid]=1) < (target=0) <= (nums[right]=2)\n",
       "\n",
       "left = 4, right = 4, mid = 4\n"
      ]
@@ -113,15 +113,15 @@
       "\n",
       "left = 0, right = 6, mid = 3\n",
       "left(4 ~ 7): (nums[mid] = 7) >= (nums[right] = 2)\n",
-      "Not in - (target = 3) >= (nums[mid] = 7) or (target = 3) < (nums[left] = 4)\n",
+      "Not in - (nums[left]=4) < (target=3) < (nums[mid]=7)\n",
       "\n",
       "left = 4, right = 6, mid = 5\n",
       "right(1 ~ 2): (nums[mid] = 1) < (nums[right] = 2)\n",
-      "Not in - (target = 3) <= (nums[mid] = 1) or (target = 3) > (nums[right] = 2)\n",
+      "Not in - (nums[mid]=1) < (target=3) <= (nums[right]=2)\n",
       "\n",
       "left = 4, right = 4, mid = 4\n",
       "left(0 ~ 0): (nums[mid] = 0) >= (nums[right] = 0)\n",
-      "Not in - (target = 3) >= (nums[mid] = 0) or (target = 3) < (nums[left] = 0)\n"
+      "Not in - (nums[left]=0) < (target=3) < (nums[mid]=0)\n"
      ]
     },
     {
@@ -154,7 +154,7 @@
       "\n",
       "left = 0, right = 0, mid = 0\n",
       "left(1 ~ 1): (nums[mid] = 1) >= (nums[right] = 1)\n",
-      "Not in - (target = 0) >= (nums[mid] = 1) or (target = 0) < (nums[left] = 1)\n"
+      "Not in - (nums[left]=1) < (target=0) < (nums[mid]=1)\n"
      ]
     },
     {
@@ -191,7 +191,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.2"
   },
   "orig_nbformat": 4,
   "vscode": {
