--- a/153. Find Minimum in Rotated Sorted Array.ipynb
+++ b/153. Find Minimum in Rotated Sorted Array.ipynb
@@ -11,17 +11,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* 時間複雜度：O(logn)  \n",
-    "* 空間複雜度：O(1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from typing import List"
+    "* 時間複雜度：O( $log{_2}{n}$ )  \n",
+    "* 空間複雜度：O( $1$ )"
    ]
   },
   {
@@ -30,12 +21,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from typing import List\n",
+    "\n",
     "class Solution:\n",
     "    def findMin(self, nums: List[int]) -> int:\n",
-    "        left = 0\n",
-    "        right = len(nums) - 1\n",
+    "        left = 0 # space: O(1)\n",
+    "        right = len(nums) - 1 # space: O(1)\n",
     "\n",
-    "        while left < right:\n",
+    "        while left < right: # time: O(log n)\n",
     "            mid = (left + right) // 2\n",
     "\n",
     "            print(\"-\" * 50)\n",
@@ -54,35 +47,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--------------------------------------------------\n",
-      "left = 0, mid = 3, right = 7\n",
-      "nums[left] = 4, nums[mid] = 7, nums[right] = 3\n",
-      "--------------------------------------------------\n",
-      "left = 4, mid = 5, right = 7\n",
-      "nums[left] = 0, nums[mid] = 1, nums[right] = 3\n",
-      "--------------------------------------------------\n",
-      "left = 4, mid = 4, right = 5\n",
-      "nums[left] = 0, nums[mid] = 0, nums[right] = 1\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# nums = [5,1,2,3,4]\n",
     "# nums = [2,3,4,5,1]\n",
@@ -107,7 +74,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
